@@ -590,12 +590,10 @@ public class PatoBotTest {
     @Test
     @DisplayName("Should decline 'Truco' if i only have only 'Copas' and lost the first round")
     public void shouldDeclineTrucoIfIOnlyHaveCopasAndLostTheFirstRound() {
-        TrucoCard card1 = TrucoCard.of(CardRank.FOUR, CardSuit.CLUBS);
-        TrucoCard card2 = TrucoCard.of(CardRank.KING, CardSuit.HEARTS);
-        TrucoCard vira = TrucoCard.of(CardRank.JACK, CardSuit.SPADES);
-        when(intel.getRoundResults()).thenReturn(List.of(GameIntel.RoundResult.LOST));
-        when(intel.getCards()).thenReturn(Arrays.asList(card1, card2));
-        when(intel.getVira()).thenReturn(vira);
+        card1 = TrucoCard.of(CardRank.FOUR, CardSuit.CLUBS);
+        card2 = TrucoCard.of(CardRank.KING, CardSuit.HEARTS);
+        vira = TrucoCard.of(CardRank.JACK, CardSuit.SPADES);
+        setupCardsViraAndRoundResult(Arrays.asList(card1, card2), vira, List.of(GameIntel.RoundResult.LOST));
         assertThat(patoBot.getRaiseResponse(intel)).isEqualTo(-1);
     }
 
